--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,10 +8,28 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/ptview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="0dp"
+        android:layout_gravity="right"
+        android:text="0ポイント"
+        android:textSize="40sp"
+        android:textStyle="bold" />
+
+    <TextView
         android:id="@+id/textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text=""/>
+        android:layout_alignTop="@+id/textview"
+        android:layout_alignParentStart="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="167dp"
+        android:layout_marginTop="0dp"
+        android:text="*"
+        android:layout_gravity="center"
+        android:textSize="120sp"
+        android:textStyle="bold" />
     <!--
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
@@ -28,18 +46,24 @@
         android:text="Start" />
 
     <include
-        layout="@layout/option"
         android:id="@+id/option"
-        android:layout_width="match_parent"
+        layout="@layout/option"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@id/textview"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
         />
 
     <TextView
         android:id="@+id/judgeview"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text=""
         android:layout_below="@id/option"
-    />
+        android:layout_alignParentStart="true"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:text=""
+        android:textSize="38sp"
+        android:textStyle="bold" />
 </RelativeLayout>
