--- a/app/src/main/res/layout/option.xml
+++ b/app/src/main/res/layout/option.xml
@@ -5,40 +5,49 @@
         style="?attr/actionBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <Button
             android:id="@+id/option_1"
             style="?attr/buttonBarButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:text="0"
-            />
+            android:textSize="100sp"
+            android:textStyle="bold" />
+
         <Button
             android:id="@+id/option_2"
             style="?attr/buttonBarButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:text="0"
-            />
+            android:textSize="100sp"
+            android:textStyle="bold" />
     </TableRow>
 
     <TableRow
         style="?attr/actionBarStyle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
+
         <Button
             android:id="@+id/option_3"
             style="?attr/buttonBarButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:text="0"
-            />
+            android:textSize="100sp"
+            android:textStyle="bold" />
+
         <Button
             android:id="@+id/option_4"
             style="?attr/buttonBarButtonStyle"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:text="0"
-            />
+            android:textAlignment="center"
+            android:textSize="100sp"
+            android:textStyle="bold" />
     </TableRow>
 
 </TableLayout>
