--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -8,7 +8,17 @@
     tools:context=".MainActivity">
 
     <TextView
+        android:id="@+id/timeview"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="0dp"
+        android:layout_gravity="right"
+        android:text="30秒"
+        android:textSize="40sp"
+        android:textStyle="bold" />
+    <TextView
         android:id="@+id/ptview"
+        android:layout_below="@id/timeview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="0dp"
@@ -17,17 +27,15 @@
         android:textSize="40sp"
         android:textStyle="bold" />
 
+
     <TextView
         android:id="@+id/textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@+id/textview"
-        android:layout_alignParentStart="true"
+        android:layout_alignTop="@id/ptview"
         android:layout_centerHorizontal="true"
-        android:layout_marginStart="167dp"
-        android:layout_marginTop="0dp"
+        android:gravity="center_horizontal"
         android:text="*"
-        android:layout_gravity="center"
         android:textSize="120sp"
         android:textStyle="bold" />
     <!--
