--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,7 @@
         android:layout_height="wrap_content"
         android:layout_marginEnd="0dp"
         android:layout_gravity="right"
-        android:text="30秒"
+        android:text="30びょう"
         android:textSize="40sp"
         android:textStyle="bold" />
     <TextView
@@ -51,7 +51,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_gravity="bottom"
-        android:text="Start" />
+        android:text="スタート" />
 
     <include
         android:id="@+id/option"
@@ -71,7 +71,7 @@
         android:layout_alignParentStart="true"
         android:layout_gravity="center"
         android:gravity="center"
-        android:text="Startボタンを押してください"
+        android:text="スタートボタンをおしてね"
         android:textSize="38sp"
         android:textStyle="bold" />
 <!--
