Change  to blackboard style

--- a/app/src/main/res/layout/option.xml
+++ b/app/src/main/res/layout/option.xml
@@ -13,7 +13,8 @@
             android:layout_height="match_parent"
             android:text="0"
             android:textSize="80sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textColor="#FFFFFF" />
 
         <Button
             android:id="@+id/option_2"
@@ -22,7 +23,8 @@
             android:layout_height="match_parent"
             android:text="0"
             android:textSize="80sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textColor="#FFFFFF" />
     </TableRow>
 
     <TableRow
@@ -37,7 +39,8 @@
             android:layout_height="match_parent"
             android:text="0"
             android:textSize="80sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textColor="#FFFFFF" />
 
         <Button
             android:id="@+id/option_4"
@@ -47,7 +50,8 @@
             android:text="0"
             android:textAlignment="center"
             android:textSize="80sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:textColor="#FFFFFF" />
     </TableRow>
 
 </TableLayout>
