--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,7 +5,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
+    tools:context=".MainActivity"
+    android:background="#006400">
 
     <TextView
         android:id="@+id/timeview"
@@ -15,7 +16,8 @@
         android:layout_gravity="right"
         android:text="30びょう"
         android:textSize="40sp"
-        android:textStyle="bold" />
+        android:textStyle="bold"
+        android:textColor="#FFFFFF"/>
     <TextView
         android:id="@+id/ptview"
         android:layout_below="@id/timeview"
@@ -25,6 +27,20 @@
         android:layout_gravity="right"
         android:text="0ポイント"
         android:textSize="40sp"
+        android:textStyle="bold"
+        android:textColor="#FFFFFF"/>
+
+    <TextView
+        android:id="@+id/judgeview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@+id/ptview"
+        android:layout_alignParentStart="true"
+        android:layout_gravity="center"
+        android:gravity="center"
+        android:text="スタートボタンを\nおしてね"
+        android:textColor="#FFFFFF"
+        android:textSize="36sp"
         android:textStyle="bold" />
 
 
@@ -32,12 +48,24 @@
         android:id="@+id/textview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignTop="@id/ptview"
+        android:layout_above="@id/option"
         android:layout_centerHorizontal="true"
         android:gravity="center_horizontal"
         android:text="*"
+        android:textColor="#68a9cf"
         android:textSize="100sp"
         android:textStyle="bold" />
+
+    <include
+        android:id="@+id/option"
+        layout="@layout/option"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_above="@id/button"
+        android:layout_centerHorizontal="true"
+        android:layout_gravity="center"
+        android:textColor="#FFFFFF"
+        />
     <!--
     app:layout_constraintBottom_toBottomOf="parent"
     app:layout_constraintLeft_toLeftOf="parent"
@@ -54,27 +82,9 @@
         android:text="スタート"
         android:textSize="24sp" />
 
-    <include
-        android:id="@+id/option"
-        layout="@layout/option"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/textview"
-        android:layout_centerHorizontal="true"
-        android:layout_gravity="center"
-        />
 
-    <TextView
-        android:id="@+id/judgeview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/button"
-        android:layout_alignParentStart="true"
-        android:layout_gravity="center"
-        android:gravity="center"
-        android:text="スタートボタンをおしてね"
-        android:textSize="30sp"
-        android:textStyle="bold" />
+
+
 <!--
     <VideoView
         android:id="@+id/video"
