--- a/app/src/main/res/layout/activity_result.xml
+++ b/app/src/main/res/layout/activity_result.xml
@@ -6,14 +6,17 @@
     android:layout_height="match_parent"
     tools:context=".ResultActivity"
     android:gravity="center_horizontal"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="#006833">
 
     <TextView
+        android:id="@+id/tileview"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="こんかいのきろく"
         android:textSize="20sp"
-        android:layout_marginTop="50dp"/>
+        android:layout_marginTop="50dp"
+        android:textColor="#FFFFFF"/>
 
     <TextView
         android:id="@+id/resultview"
@@ -21,7 +24,8 @@
         android:layout_height="wrap_content"
         android:text="こんかいのスコア：100"
         android:textSize="30sp"
-        android:layout_marginTop="60dp"/>
+        android:layout_marginTop="60dp"
+        android:textColor="#FFFFFF"/>
 
 
     <TextView
@@ -32,7 +36,7 @@
         android:text="ハイスコア : 333"
         android:textSize="30sp"
         android:layout_marginTop="60dp"
-        />
+        android:textColor="#FFFFFF" />
 
     <Button
         android:id="@+id/topbutton"
@@ -40,6 +44,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="80dp"
         android:text="もういちど\nちょうせんする"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        android:textColor="#FFFFFF"/>
 
 </LinearLayout>
